updated css style sheet h1 color, background color, h2 text format, h1 alignment. Inserted index.html into HTML validator - fixed <body> error (nav is now inside body). Validated contrast

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,21 @@
 body{
-    background-color: beige;
+    background-color: #f5f5dc;
 }
 
+h1{
+    text-align: center;
+    color: #6F3811;
+    font-size: xx-large; 
+}
+
+h2{
+    text-decoration: underline;
+}
+
+p{
+    border: black;
+}
+
+footer{
+    text-align: center;
+}
